--- a/index.html
+++ b/index.html
@@ -1,23 +1,4 @@
-{% load static %}
-
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Mark McDonald</title>
-</head>
-
-<body>
-<!--    <h1>Employment History</h1>-->
-<!--    {% for job in jobs.all %}-->
-
-<!--    {{ job.company }}-->
-<!--    {{ job.business_unit }}-->
-<!--    {{ job.title }}-->
-<!--    {{ job.start_date }}  {{ job.end_date }}-->
-<!--    {{ job.summary }}-->
-
-<!--    {% endfor %}-->
 
 <!doctype html>
 <html lang="en">
@@ -31,7 +12,7 @@
 <!--    <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/carousel/">-->
 
     <!-- Bootstrap core CSS -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 
     <style>
@@ -50,9 +31,12 @@
         }
       }
     </style>
+
     <!-- Custom styles for this template -->
-      <link rel="stylesheet" href="{% static 'home/home.css' %}" />
+      <link rel="stylesheet" href="static/home/home.css" />
   </head>
+
+
   <body>
     <header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
@@ -144,7 +128,7 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-        <img src="{% static 'images/harvard_shield_wreath.png' %}" class="rounded mx-auto d-block" width="140" height="140" alt="Harvard Shield" />
+        <img src="{images/harvard_shield_wreath.png" class="rounded mx-auto d-block" width="140" height="140" alt="Harvard Shield" />
         <h2>Harvard Extension / Software Engineering</h2>
         <div class="tagline_row">
           <p>Certificate in data science with coursework target towards computer vision problems.</p>
@@ -152,7 +136,7 @@
         <p><a class="btn btn-secondary" href="#" role="button">Review Coursework &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="{% static 'images/digital_circuit.jpg' %}" class="rounded mx-auto d-block" width="140" height="140" alt="Projects" />
+        <img src="images/digital_circuit.jpg" class="rounded mx-auto d-block" width="140" height="140" alt="Projects" />
         <h2>Example Projects</h2>
         <div class="tagline_row">
           <p>Deep learning models to find a navigable path in a video sequence.  No-frills chat application.  Image Collection Network of Raspberry Pi's</p>
@@ -160,7 +144,7 @@
         <p><a class="btn btn-secondary" href="#" role="button">See Project Examples &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="{% static 'images/gears.png' %}" class="rounded mx-auto d-block" width="140" height="140" alt="Projects" />
+        <img src="images/gears.png" class="rounded mx-auto d-block" width="140" height="140" alt="Projects" />
         <h2>Business Experience</h2>
         <div class="tagline_row">
           <p>Broad business experience:  Director of Finance at Large Equipment Manufacturer.  Global Mergers & Acquisitions.  Project Management.  Work Abroad.  Systems Implementations.  CIO.</p>
