--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <a class="nav-link disabled" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="resume">Resume</a>
+          <a class="nav-link" href="resume.html">Resume</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="mailto:mark.mcdonald1@icloud.com">Contact</a>
