--- a/resume.html
+++ b/resume.html
@@ -1,15 +1,5 @@
-{% load static %}
 
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Mark McDonald</title>
-</head>
-
-<body>
-
-<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -21,8 +11,7 @@
 <!--    <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/carousel/">-->
 
     <!-- Bootstrap core CSS -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <style>
       .bd-placeholder-img {
@@ -81,7 +70,7 @@
   ================================================== -->
   <!-- Display resume in PDF format. -->
 
-<embed src="{% static 'mark_mcdonald_resume.pdf' %}" width="100%" height="2100px" />
+<embed src="static/mark_mcdonald_resume.pdf" width="100%" height="2100px" />
 
 
   <!-- FOOTER -->
