--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </style>
 
     <!-- Custom styles for this template -->
-      <link rel="stylesheet" href="static/home/home.css" />
+    <link rel="stylesheet" href="static/home/home.css" />
   </head>
 
 
@@ -128,7 +128,7 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-        <img src="{images/harvard_shield_wreath.png" class="rounded mx-auto d-block" width="140" height="140" alt="Harvard Shield" />
+        <img src="static/images/harvard_shield_wreath.png" class="rounded mx-auto d-block" width="140" height="140" alt="Harvard Shield" />
         <h2>Harvard Extension / Software Engineering</h2>
         <div class="tagline_row">
           <p>Certificate in data science with coursework target towards computer vision problems.</p>
@@ -136,7 +136,7 @@
         <p><a class="btn btn-secondary" href="#" role="button">Review Coursework &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="images/digital_circuit.jpg" class="rounded mx-auto d-block" width="140" height="140" alt="Projects" />
+        <img src="static/images/digital_circuit.jpg" class="rounded mx-auto d-block" width="140" height="140" alt="Projects" />
         <h2>Example Projects</h2>
         <div class="tagline_row">
           <p>Deep learning models to find a navigable path in a video sequence.  No-frills chat application.  Image Collection Network of Raspberry Pi's</p>
@@ -144,7 +144,7 @@
         <p><a class="btn btn-secondary" href="#" role="button">See Project Examples &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="images/gears.png" class="rounded mx-auto d-block" width="140" height="140" alt="Projects" />
+        <img src="static/images/gears.png" class="rounded mx-auto d-block" width="140" height="140" alt="Projects" />
         <h2>Business Experience</h2>
         <div class="tagline_row">
           <p>Broad business experience:  Director of Finance at Large Equipment Manufacturer.  Global Mergers & Acquisitions.  Project Management.  Work Abroad.  Systems Implementations.  CIO.</p>
