--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
       }
     </style>
     <!-- Custom styles for this template -->
-      <link rel="stylesheet" href="{% static 'home/home.css' %}" />
+    <link rel="stylesheet" href="static/home/home.css" />
   </head>
   <body>
     <header>
