--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="tagline_row">
           <p>Broad business experience:  Director of Finance at Large Equipment Manufacturer.  Global Mergers & Acquisitions.  Project Management.  Work Abroad.  Systems Implementations.  CIO.</p>
         </div>
-        <p><a class="btn btn-secondary" href="resume/" role="button">View Resume &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="resume.html" role="button">View Resume &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
