added course summary

--- a/course_summary.html
+++ b/course_summary.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Mark McDonald Professional Overview">
+    <meta name="description" content="Mark McDonald Graduate Studies Course Summary">
     <meta name="author" content="Mark McDonald">
-    <title>Mark McDonald · Work History</title>
+    <title>Mark McDonald · Course Summary</title>
 
 <!--    <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/carousel/">-->
 
@@ -45,13 +45,13 @@
           <a class="nav-link" href="/">Home </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">Resume <span class="sr-only">(current)</span></a>
-        </li>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="course_summary.html">Course Summary</a>
+          <a class="nav-link disabled" href="resume.html">Resume </a>
         </li>
         <li class="nav-item">
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Course Summary <span class="sr-only">(current)</span></a>
+        </li>
           <a class="nav-link" href="mailto:mark.mcdonald1@icloud.com">Contact</a>
         </li>
         <!-- <li class="nav-item">
@@ -74,7 +74,7 @@
   ================================================== -->
   <!-- Display resume in PDF format. -->
 
-<embed src="static/mark_mcdonald_resume.pdf" width="100%" height="2100px" />
+<embed src="static/mark_mcdonald_course_summary.pdf" width="100%" height="5250px" />
 
 
   <!-- FOOTER -->
