--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
           <a class="nav-link" href="resume.html">Resume</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="course_summary.html">Course Summary</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="mailto:mark.mcdonald1@icloud.com">Contact</a>
         </li>
         <!-- <li class="nav-item">
