added course summary

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="tagline_row">
           <p>Certificate in data science with coursework target towards computer vision problems.</p>
         </div>
-        <p><a class="btn btn-secondary" href="#" role="button">Review Coursework &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="course_summary.html" role="button">Review Coursework &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="static/images/digital_circuit.jpg" class="rounded mx-auto d-block" width="140" height="140" alt="Projects" />
