--- a/course_summary.html
+++ b/course_summary.html
@@ -44,13 +44,11 @@
         <li class="nav-item active">
           <a class="nav-link" href="/">Home </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="resume.html">Resume </a>
+        <li class="nav-item active">
+          <a class="nav-link" href="resume.html">Resume </a>
         </li>
         <li class="nav-item">
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Course Summary <span class="sr-only">(current)</span></a>
+          <a class="nav-link disabled" href="#">Course Summary <span class="sr-only">(current)</span></a>
         </li>
           <a class="nav-link" href="mailto:mark.mcdonald1@icloud.com">Contact</a>
         </li>
