--- a/resume.html
+++ b/resume.html
@@ -47,11 +47,10 @@
         <li class="nav-item">
           <a class="nav-link disabled" href="#">Resume <span class="sr-only">(current)</span></a>
         </li>
-        </li>
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="course_summary.html">Course Summary</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="mailto:mark.mcdonald1@icloud.com">Contact</a>
         </li>
         <!-- <li class="nav-item">
