--- a/index.html
+++ b/index.html
@@ -1,125 +1,11 @@
-<!DOCTYPE html>
+---
+layout: default
+description: Mark McDonald Professional Overview
+author: Mark McDonald
+title: Mark McDonald · Professional Overview
+---
 
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Mark McDonald Professional Overview">
-    <meta name="author" content="Mark McDonald">
-    <title>Mark McDonald · Work History</title>
-
-<!--    <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/carousel/">-->
-
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
-
-    <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="static/home/home.css" />
-  </head>
-
-
-  <body>
-    <header>
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="#">Mark McDonald</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="resume.html">Resume</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="course_summary.html">Course Summary</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="mailto:mark.mcdonald1@icloud.com">Contact</a>
-        </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li> -->
-      </ul>
-      <!-- <form class="form-inline mt-2 mt-md-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form> -->
-      <a class="my-2 my-sm-0" href="mailto:mark.mcdonald1@icloud.com">mark.mcdonald1@icloud.com</a>
-    </div>
-  </nav>
-</header>
-
-<main role="main">
-
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
-        <div class="container">
-          <div class="carousel-caption text-left">
-            <h1>Balanced Experience</h1>
-            <p>Corporate Financial Management  //  Mergers & Acquisitions  //  Information Technology</p>
-            <!-- <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p> -->
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Technology Passion</h1>
-            <p>Technology assisted solutions to improve business performance.</p>
-            <!-- <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p> -->
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#777"/></svg>
-        <div class="container">
-          <div class="carousel-caption text-right">
-            <h1>Leadership</h1>
-            <p>Large (100+) project teams // business unit financial leadership //  CIO of 500+ employee company  // Comfortable with the responsibility of leading projects and organizations.</p>
-            <!-- <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p> -->
-          </div>
-        </div>
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
+{% include carousel.html %}
 
 
   <!-- Marketing messaging and featurettes
@@ -128,93 +14,10 @@
 
   <div class="container marketing">
 
-    <!-- Three columns of text below the carousel -->
-    <div class="row">
-      <div class="col-lg-4">
-        <img src="/static/images/harvard_shield_wreath.png" class="rounded mx-auto d-block" width="140" height="140" alt="Harvard Shield" />
-        <h2>Harvard Extension / Software Engineering</h2>
-        <div class="tagline_row">
-          <p>Certificate in data science with coursework target towards computer vision problems.</p>
-        </div>
-        <p><a class="btn btn-secondary" href="course_summary.html" role="button">Review Coursework &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <img src="static/images/digital_circuit.jpg" class="rounded mx-auto d-block" width="140" height="140" alt="Projects" />
-        <h2>Example Projects</h2>
-        <div class="tagline_row">
-          <p>Deep learning models to find a navigable path in a video sequence.  No-frills chat application.  Image Collection Network of Raspberry Pi's</p>
-        </div>
-        <p><a class="btn btn-secondary" href="#" role="button">See Project Examples &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <img src="static/images/gears.png" class="rounded mx-auto d-block" width="140" height="140" alt="Projects" />
-        <h2>Business Experience</h2>
-        <div class="tagline_row">
-          <p>Broad business experience:  Director of Finance at Large Equipment Manufacturer.  Global Mergers & Acquisitions.  Project Management.  Work Abroad.  Systems Implementations.  CIO.</p>
-        </div>
-        <p><a class="btn btn-secondary" href="resume.html" role="button">View Resume &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-    </div><!-- /.row -->
+   {% include headlines.html %} 
+   
+   {% include projects.html %} 
 
-
-    <!-- START THE FEATURETTES -->
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7">
-        <h3 class="featurette-heading">Pathfinder</h3>
-        <h3 class="text-primary"> Off-road Navigation</h3>
-        <p class="lead">Using Keras and OpenCV, Pathfinder will highlight a navigable path on a video of off-road terrain.  The model was trained on a small set of publically available data that was augmented to produce a useful set of training data.</p>
-      </div>
-      <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-      </div>
-    </div>
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7 order-md-2">
-        <h3 class="featurette-heading">RaspPi-Cam Data Collection</h3>
-        <h3 class="text-primary"> Platform for visual data collection</h3>
-        <p class="lead">This project uses a series of Raspberry Pi cameras in conjunction with Docker containers and ROS.  Cameras are networked and collect image data.  Images and identified and statictical data collected.</p>
-      </div>
-      <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-      </div>
-    </div>
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7">
-        <h3 class="featurette-heading">Chatterbox</h3>
-        <h3 class="text-primary"> A fun, no-frills, web-based, chat app</h3>
-        <p class="lead">A simple chat application demonstrating basic HTML, CSS, Flask and Internet messaging.</p>
-      </div>
-      <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-      </div>
-    </div>
-
-    <hr class="featurette-divider">
-
-    <!-- /END THE FEATURETTES -->
 
   </div><!-- /.container -->
 
-
-  <!-- FOOTER -->
-  <footer class="container">
-    <p class="float-right"><a href="#">Back to top</a></p>
-    <p>&copy; Mark McDonald &middot; </p>
-  </footer>
-</main>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-</body>
-
-</html>
