adding project pages

--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@ author: Mark McDonald
 title: Mark McDonald · Professional Overview
 ---
 
-{% include carousel.html %}
+{% include intro.html %} 
+
+<!-- Marketing messaging and featurettes
+================================================== -->
+<!-- Wrap the rest of the page in another container to center all the content. -->
+
+<div class="container marketing">
 
 
-  <!-- Marketing messaging and featurettes
-  ================================================== -->
-  <!-- Wrap the rest of the page in another container to center all the content. -->
 
-  <div class="container marketing">
+{% include headlines.html %}
 
-   {% include headlines.html %} 
-   
-   {% include projects.html %} 
+{% include projects.html %} 
 
 
-  </div><!-- /.container -->
+</div><!-- /.container -->
 
