added covid tracker to projects

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ author: Mark McDonald
 title: Mark McDonald · Professional Overview
 ---
 
+<!-- Found in '_includes/'-->
 {% include intro.html %} 
 
 <!-- Marketing messaging and featurettes
@@ -12,8 +13,7 @@ title: Mark McDonald · Professional Overview
 <!-- Wrap the rest of the page in another container to center all the content. -->
 
 <div class="container marketing">
-
+	<!-- Found in _includes/-->
 	{% include headlines.html %}
-
-</div><!-- /.container -->
+</div>
 
