--- a/course_summary.html
+++ b/course_summary.html
@@ -13,7 +13,7 @@ title: Mark McDonald · Course Summary
 	<div class="row">
 		<div class="col"></div>
 		<div class="col-12 col-sm-12 col-md-12 col-lg-9 col-xl-7">
-				<iframe src="couse_summary/mark_mcdonald_course_summary.html" frameborder="0" scrolling="no" width="700px" height="4000px"></iframe>
+				<iframe src="static/mark_mcdonald_course_summary.pdf" frameborder="0" scrolling="no" width="700px" height="4000px"></iframe>
 			</div>
 		<div class="col"></div>  
 	</div>
