--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,8 @@ title: Mark McDonald · Resume
 	<div class="row">
 		<div class="col"></div>
 		<div class="col-12 col-sm-12 col-md-12 col-lg-9 col-xl-7">
-			<iframe src="resume/mark_mcdonald_resume.html" frameborder="0" scrolling="no" width="100%" height="1700px"></iframe>
+<!--			<iframe src="resume/mark_mcdonald_resume.html" frameborder="0" scrolling="no" width="100%" height="1700px"></iframe>-->
+			<iframe src="static/mark_mcdonald_resume.pdf" frameborder="0" scrolling="no" width="100%" height="1700px"></iframe>
 		</div>
 		<div class="col"></div>  
 	</div>
