layout and formatting

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@ title: Mark McDonald · Resume
 ================================================== -->
 <!-- Display contact details -->
 
-<div class="conainer my-5 mx-2">
+<div class="container my-5 mx-2">
 <hr>
 	{% for item in site.data.contact %}
 		<div class="row">
