--- a/projects.html
+++ b/projects.html
@@ -9,8 +9,7 @@ title: Mark McDonald · Projects
 ================================================== -->
 <!-- Display projects -->
 
-<div class="container marketing">
-
+<div class="container marketing ">
 
 <!-- {% include project_marketing.html %}  -->
 
@@ -18,22 +17,22 @@ title: Mark McDonald · Projects
 
 {% for project in site.projects %}
 
-	<div class="row featurette">
+	<div class="row featurette d-flex align-items-center">
 	  
 	  
-	  <div class="col-md-7 {% cycle '', 'order-md-2' %}">
+	  <div class="col-md-7 {% cycle '', 'order-md-2' %} ">
 	
 		<a href={{ project.url }}>
-			<h3 class="featurette-heading">{{ project.project_name }}</h3>
+			<h4 class="featurette-heading">{{ project.project_name }}</h4>
 		</a>
 		<h3 class="featurette-tagline">{{ project.description }}</h3>
 
 		<p class="lead">{{ project.summary }}</p>
 	  </div>
   
-	  <div class="col-md-5 {% cycle '', 'order-md-1' %}">
+	  <div class="col-md-4 {% cycle '', 'order-md-1' %} ">
 	  	<a href={{ project.url }}>
-	  		<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src={{ project.image }} class="rounded mx-auto d-block" width="300" height="300" alt={{ project.project_name }} />
+	  		<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src={{ project.image }} width="100%" alt={{ project.project_name }} />
 <!-- 		<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>{{ project.project_name }}</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg> -->
 	  	</a>
 	  </div>
