layout and formatting

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@ title: Mark McDonald · Resume
 <div class="container my-5 mx-2">
 <hr>
 	{% for item in site.data.contact %}
-		<div class="row">
+		<div class="row mb-2">
 			<div class="col-2"></div>
 			
 			<div class="col-1">
