layout and formatting

--- a/projects.html
+++ b/projects.html
@@ -14,18 +14,22 @@ title: Mark McDonald · Projects
 <!-- {% include project_marketing.html %}  -->
 <div class="mt-5">
 	<div class="project-heading">Technical Skills</div>
-	<div class="lead">My Harvard coursework focused on Python but also included C/Unix and Java.
+<!--	<div class="row">-->
+<!--		<div class="col-md-6">-->
+	<div class="lead col-lg-10">My Harvard coursework focused on Python but also included C/Unix and Java.
 	Data Science work included extensive work with the popular python packages for Machine/Deep Learning
 		and data management.</div>
-	<div class="mt-2" style="font-weight: bold">Languages, Frameworks, Libraries</div>
+<!--		</div>-->
+<!--		<div class="col-md-4">-->
+	<div class="row m-2" style="font-weight: bold">Languages, Frameworks, Libraries and Methodologies</div>
 	<div class="row">
-
 		<ul>
 			<li>Python</li>
 			<li>Open CV</li>
 			<li>Pandas</li>
 			<li>Numpy</li>
-			<li>SciKit-Learn / Statsmodels / PyGam</li>
+			<li>SciKit-Learn / Statsmodels</li>
+			<li>PyGam / PyMC3</li>
 			<li>Keras / Tensorflow</li>
 			<li>Bokeh</li>
 			<li>Django</li>
@@ -34,12 +38,35 @@ title: Mark McDonald · Projects
 		<ul>
 			<li>Docker</li>
 			<li>Agile</li>
+			<li>UML</li>
 			<li>Flask</li>
 			<li>C / Unix</li>
 			<li>Java (incl. Maven)</li>
 			<li>Springboot</li>
-			<li>Java Microsservices with Springboot</li>
+			<li>Microservices</li>
 			<li>RaspberryPi</li>
+		</ul>
+	</div>
+
+	<div class="row m-2" style="font-weight: bold">ML, Deep Learning and Statistical Modeling</div>
+	<div class="row">
+		<ul>
+			<li>Linear and Logistical Regression</li>
+			<li>Generalized Additive Models (GAMs)</li>
+			<li>Basic Reinforcement Learning</li>
+			<li>Bayesian Modeling</li>
+			<li>Splines</li>
+			<li>Clustering</li>
+			<li>Non-parametric Models</li>
+		</ul>
+		<ul>
+			<li>Ensemble Methods</li>
+			<li>NLP (Embeddings, RNN, LSTM)</li>
+			<li>CNN / Mask RCNN</li>
+			<li>Autoencoders</li>
+			<li>PCA</li>
+			<li>Generative Adversarial Networks (GANs)</li>
+			<li>Transfer Learning</li>
 		</ul>
 	</div>
 
